2-subnets.tf
# https://registry.terraform.io/providers/hashicorp/aws/latest/docs/resources/subnet

# Public Subnets
resource "aws_subnet" "public-1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.230.1.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "public-1"
  }
}

resource "aws_subnet" "public-2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.230.2.0/24"
  availability_zone = "us-east-1b"

  tags = {
    Name = "public-2"
  }
}
resource "aws_subnet" "public-3" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.230.3.0/24"
  availability_zone = "us-east-1c"

  tags = {
    Name = "public-3"
  }
}

# Private Subnets
resource "aws_subnet" "private-1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.230.11.0/24"
  availability_zone = "us-east-1a"

  tags = {
    Name = "private-1"
  }
}

resource "aws_subnet" "private-2" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.230.12.0/24"
  availability_zone = "us-east-1b"

  tags = {
    Name = "private-2"
  }
}
resource "aws_subnet" "private-3" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.230.13.0/24"
  availability_zone = "us-east-1c"


  tags = {
    Name = "private-3"
  }
}
